[gd_scene load_steps=18 format=3 uid="uid://dd3i830yuoi1p"]

[ext_resource type="Script" path="res://scripts/stage.gd" id="1_6gbow"]
[ext_resource type="AudioStream" uid="uid://d2mo870ac3twi" path="res://sound/bgm/ST-01.mp3" id="2_kiyj8"]
[ext_resource type="PackedScene" uid="uid://dibvuj5u7kix7" path="res://scenes/enemies/spinner.tscn" id="2_q1ty3"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BuHBulletProperties.gd" id="4_g1864"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BulletProps.gd" id="5_m13gl"]
[ext_resource type="Script" path="res://addons/BulletUpHell/BuHPattern.gd" id="6_00ppo"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternOne.gd" id="7_q5shm"]

[sub_resource type="Curve2D" id="Curve2D_hteev"]
_data = {
"points": PackedVector2Array(66.6708, 117.468, -66.6708, -117.468, 118, 372, 0, 0, 0, 0, 289, 174, 15.8499, -191.039, -15.8499, 191.039, 422, 306, 0, 0, 0, 0, 118, 371)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_wkv1n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 636, 12, 0, 0, 0, 0, 665, 347, 0, 0, 0, 0, 550, 432, 0, 0, 0, 0, 503, 302, 0, 0, 0, 0, 581, 190, 0, 0, 0, 0, 620, 214, 0, 0, 0, 0, 1161, 261)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_npw4e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 704, -42, 191.724, -5.88627, -191.724, 5.88627, 537, 177, -431.38, -112.68, 431.38, 112.68, 380, 281, 179.952, -56.3401, -179.952, 56.3401, 116, 419, 0, 0, 0, 0, -64, 566, 0, 0, 0, 0, -319, 684)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qsy2"]
size = Vector2(1291, 20)

[sub_resource type="Curve2D" id="Curve2D_7nvic"]

[sub_resource type="Curve" id="Curve_opi85"]

[sub_resource type="Curve" id="Curve_7v0il"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_wi4l3"]
script = ExtResource("5_m13gl")
speed = 250.0
scale = 0.5
angle = -0.1996
groups = []
anim_idle_texture = "0"
anim_spawn_texture = ""
anim_waiting_texture = ""
anim_delete_texture = ""
anim_idle_collision = "0"
anim_spawn_collision = ""
anim_waiting_collision = ""
anim_delete_collision = ""
anim_idle_sfx = -1
anim_spawn_sfx = -1
anim_waiting_sfx = -1
anim_delete_sfx = -1
spec_bounces = 0
spec_no_collision = false
spec_modulate_loop = 0.0
spec_skew = 0.0
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_rotating_speed = 0.0
spec_angle_no_colliding = null
spec_angle_no_coll_offset = null
death_after_time = 30.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
a_direction_equation = ""
a_curve_movement = 0
a_speed_multiplier = SubResource("Curve_opi85")
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0
homing_time_start = 0
homing_duration = 999
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_7v0il")
scale_multi_scale = 1
r_randomisation_chances = 1.0
r_speed_choice = ""
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = ""
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = ""
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = ""
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = ""
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = ""
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = ""
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = ""
r_group_target_choice = ""
r_pos_target_choice = ""
r_steer_choice = ""
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = ""
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = ""
r_homing_dur_variation = Vector3(0, 0, 0)
r_beam_length_choice = ""
r_beam_length_variation = Vector3(0, 0, 0)
r_beam_bounce_choice = ""
r_beam_width_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[sub_resource type="Curve2D" id="Curve2D_n2n80"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6d5am"]
resource_name = "PatternOne"
source_geometry_group_name = &"navigation_polygon_source_group"
script = ExtResource("7_q5shm")
bullet = "smalltrio"
iterations = 1
follows_parent = true
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
cooldown_stasis = false
cooldown_spawn = 0.017
cooldown_shoot = 0.017
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
wait_latence = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
layer_nbr = 3
layer_cooldown_spawn = 0.0
layer_pos_offset = 10.0
layer_speed_offset = 0.0
layer_angle_offset = 0.2004
r_randomisation_chances = 1.0
r_bullet_choice = ""
r_bullet_nbr_choice = "10"
r_bullet_nbr_variation = Vector3(0, 0, 0)
r_pattern_angle_choice = ""
r_pattern_angle_variation = Vector3(0, 0, 0)
r_infinite_iter_chances = 0.0
r_iterations_choice = ""
r_iterations_variation = Vector3(0, 0, 0)
r_forced_angle_choice = ""
r_forced_angle_variation = Vector3(0, 0, 0)
r_forced_target_choice = []
r_stasis_chances = 0.0
r_cooldown_spawn_choice = ""
r_cooldown_spawn_variation = Vector3(0, 0, 0)
r_cooldown_shoot_choice = ""
r_cooldown_shoot_variation = Vector3(0, 0, 0)
r_cooldown_n_spawn_choice = ""
r_cooldown_n_spawn_variation = Vector3(0, 0, 0)
r_cooldown_n_shoot_choice = ""
r_cooldown_n_shoot_variation = Vector3(0, 0, 0)

[node name="World" type="Node2D"]
process_mode = 1
z_index = -10
script = ExtResource("1_6gbow")
metadata/_edit_vertical_guides_ = [-126.0]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="EnemyContainer"]
position = Vector2(-13, 6)
curve = SubResource("Curve2D_hteev")

[node name="Spinner" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(278, -142)
speed = 300
shotPattern = "hex"
shotAmount = 10
shotCoolDown = 0.1
movePattern = "Path2D"
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner4" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(447, -901)
speed = 250
shotPattern = "hex"
shotAmount = 3
shotCoolDown = 1.0
shotStartUp = 0.5
lifeTime = 8
movePattern = "Across"
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner5" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(442, -1136)
speed = 250
shotPattern = "hex"
shotAmount = 3
shotCoolDown = 1.0
shotStartUp = 0.6
lifeTime = 8
movePattern = "Across"
pathOffset = Vector2(-10, 0)
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner6" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(446, -1350)
speed = 250
shotPattern = "hex"
shotAmount = 3
shotCoolDown = 1.0
shotStartUp = 0.7
lifeTime = 8
movePattern = "Across"
pathOffset = Vector2(-20, 0)
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner7" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(451, -1631)
speed = 250
shotPattern = "hex"
shotAmount = 3
shotCoolDown = 1.0
shotStartUp = 0.8
lifeTime = 8
movePattern = "Across"
pathOffset = Vector2(-30, 0)
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner8" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(444, -1881)
speed = 250
shotPattern = "hex"
shotAmount = 3
shotCoolDown = 1.0
shotStartUp = 0.9
lifeTime = 8
movePattern = "Across"
pathOffset = Vector2(-40, 0)
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner2" parent="EnemyContainer" node_paths=PackedStringArray("aimTarget") instance=ExtResource("2_q1ty3")]
position = Vector2(425, -356)
speed = 100
lifeTime = 11
movePattern = "Path2D2"
aimTarget = NodePath("../../PlayerTracker")

[node name="Spinner3" parent="EnemyContainer" instance=ExtResource("2_q1ty3")]
position = Vector2(493, -588)
speed = 200
movePattern = "Path2D"
pathOffset = Vector2(50, -30)

[node name="Path2D2" type="Path2D" parent="EnemyContainer"]
curve = SubResource("Curve2D_wkv1n")

[node name="Across" type="Path2D" parent="EnemyContainer"]
position = Vector2(6, 2)
curve = SubResource("Curve2D_npw4e")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kiyj8")
autoplay = true

[node name="PlayerTracker" type="Node2D" parent="."]
position = Vector2(369, 758)

[node name="EnemySpawner" type="Area2D" parent="."]
monitorable = false

[node name="SpawnDetector" type="CollisionShape2D" parent="EnemySpawner"]
position = Vector2(635.5, 0)
shape = SubResource("RectangleShape2D_0qsy2")

[node name="BulletContainer" type="Node2D" parent="."]

[node name="BulletPattern" type="Path2D" parent="BulletContainer"]
curve = SubResource("Curve2D_7nvic")
script = ExtResource("4_g1864")
id = "smalltrio"
props = SubResource("PackedDataContainer_wi4l3")

[node name="PatternContainer" type="Node2D" parent="."]

[node name="SpawnPattern" type="Path2D" parent="PatternContainer"]
curve = SubResource("Curve2D_n2n80")
script = ExtResource("6_00ppo")
id = "hex"
pattern = SubResource("NavigationPolygon_6d5am")
preview_spawn = true
preview_shoot = true

[connection signal="area_entered" from="EnemySpawner" to="." method="_on_enemy_spawner_area_entered"]
